# alexa-whatsapp-agent

./: Dockerfile  main.py  pyproject.toml
data/: memory.db
src/ai_companion/: settings.py
src/ai_companion/core/: prompts.py
src/ai_companion/graph/: edges.py  graph.py  nodes.py  state.py
src/ai_companion/graph/utils/: chains.py  helpers.py
src/ai_companion/interfaces/chainlit/: app.py
src/ai_companion/modules/image/: image_to_text.py  text_to_image.py
src/ai_companion/modules/memory/long_term/: memory_manager.py  vector_store.py
src/ai_companion/modules/schedules/: context_generation.py
src/ai_companion/modules/speech/: text_to_speech.py
src/ai_companion/schedules/: context_generation.py
